[gd_scene load_steps=41 format=3 uid="uid://c6dgijxtv53tk"]

[ext_resource type="Script" path="res://Character/Player/player.gd" id="1_q1xjo"]
[ext_resource type="PackedScene" uid="uid://dtqijsf4hb4gv" path="res://Effects/death_effect.tscn" id="2_7ybi8"]
[ext_resource type="Resource" uid="uid://dgn4d2na6mw6d" path="res://Character/Player/player_stats.tres" id="2_e6tyk"]
[ext_resource type="PackedScene" uid="uid://basneivfqtqrp" path="res://Character/Common/hurtbox.tscn" id="2_fbwjr"]
[ext_resource type="PackedScene" uid="uid://j4umo6y1d7jp" path="res://Character/Common/hitbox.tscn" id="3_debke"]
[ext_resource type="PackedScene" uid="uid://bgd4bx1wy1tjv" path="res://Effects/hurt_effect.tscn" id="3_stndc"]
[ext_resource type="Script" path="res://Character/Common/movement.gd" id="4_j2j8w"]
[ext_resource type="Script" path="res://Character/Player/player_ability_holder.gd" id="5_dhbqj"]
[ext_resource type="Script" path="res://Character/Player/player_state_machine.gd" id="6_r6r3x"]
[ext_resource type="Shader" path="res://Character/MOB/mob_shader.gdshader" id="7_pvm4j"]
[ext_resource type="Texture2D" uid="uid://dfbyomgxf736k" path="res://Character/MOB/Art/export/Wariors/Armor/RightHand.png" id="8_65k71"]
[ext_resource type="Texture2D" uid="uid://d4ntcdp0xo2lm" path="res://Character/MOB/Art/export/Wariors/Armor/RightFoot.png" id="9_anbiv"]
[ext_resource type="Script" path="res://Character/Player/States/inactive_player_state.gd" id="9_opwty"]
[ext_resource type="Texture2D" uid="uid://bx3sv6m7e46js" path="res://Character/MOB/Art/export/Wariors/Armor/LeftFoot.png" id="10_4ur4e"]
[ext_resource type="Texture2D" uid="uid://usadd2xfsvq7" path="res://Character/MOB/Art/export/Wariors/Armor/Body.png" id="11_agssj"]
[ext_resource type="Script" path="res://Character/Player/States/idle_player_state.gd" id="12_6livb"]
[ext_resource type="Texture2D" uid="uid://0p8a21u1ac2r" path="res://Character/MOB/Art/export/Wariors/Armor/Head.png" id="12_dl1yb"]
[ext_resource type="Texture2D" uid="uid://bavvy22620lrr" path="res://Character/MOB/Art/export/Wariors/Armor/LeftArm.png" id="13_g6f5s"]
[ext_resource type="Script" path="res://Character/Player/States/walk_player_state.gd" id="14_agswa"]
[ext_resource type="Script" path="res://Global/Utils/audio_player_ramdom_pitch.gd" id="14_y643d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uujpw"]
radius = 20.0
height = 134.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8gqwq"]
radius = 66.0
height = 152.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q17jp"]
resource_local_to_scene = true
shader = ExtResource("7_pvm4j")
shader_parameter/color = Color(0.670588, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="Animation" id="Animation_3wnti"]
length = 0.001

[sub_resource type="Animation" id="Animation_cyyuq"]
resource_name = "blink_off"
length = 0.01

[sub_resource type="Animation" id="Animation_y2jtb"]
resource_name = "blink_on"
length = 0.2
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6o1v3"]
_data = {
"RESET": SubResource("Animation_3wnti"),
"blink_off": SubResource("Animation_cyyuq"),
"blink_on": SubResource("Animation_y2jtb")
}

[sub_resource type="Animation" id="Animation_62dsl"]
length = 0.001

[sub_resource type="Animation" id="Animation_gaf0u"]
resource_name = "idle"
loop_mode = 1
step = 0.05

[sub_resource type="Animation" id="Animation_mp2s4"]
resource_name = "walk"
length = 1.711
loop_mode = 1
step = 0.029

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8e67"]
_data = {
"RESET": SubResource("Animation_62dsl"),
"idle": SubResource("Animation_gaf0u"),
"walk": SubResource("Animation_mp2s4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxdej"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ykbv4"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8x581"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b4vtl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7tk5f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tkvwp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lsrv3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4yjai"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iuxlo"]
states/RESET/node = SubResource("AnimationNodeAnimation_oxdej")
states/RESET/position = Vector2(465.778, 176.667)
states/Start/position = Vector2(467.062, 64.7407)
states/idle/node = SubResource("AnimationNodeAnimation_ykbv4")
states/idle/position = Vector2(686.667, 177.704)
states/walk/node = SubResource("AnimationNodeAnimation_8x581")
states/walk/position = Vector2(686.716, 35.3333)
transitions = ["RESET", "idle", SubResource("AnimationNodeStateMachineTransition_b4vtl"), "idle", "RESET", SubResource("AnimationNodeStateMachineTransition_7tk5f"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_tkvwp"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_lsrv3"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_4yjai")]

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("rotation_part", "movement", "hurtbox", "hitbox", "ability_holder", "state_machine", "sound", "hit_sound", "hit_anim", "anim", "anim_tree", "sprites")]
top_level = true
collision_layer = 257
collision_mask = 51
script = ExtResource("1_q1xjo")
player_stats = ExtResource("2_e6tyk")
rotation_part = NodePath("sprites/rotation_part")
movement = NodePath("movement")
hurtbox = NodePath("hurtbox")
hitbox = NodePath("sprites/rotation_part/hitbox")
ability_holder = NodePath("ability_holder")
state_machine = NodePath("state_machine")
sound = NodePath("animation_&_sound/sound")
hit_sound = NodePath("animation_&_sound/hit_sound")
hit_anim = NodePath("animation_&_sound/hit_anim")
anim = NodePath("animation_&_sound/AnimationPlayer")
anim_tree = NodePath("animation_&_sound/AnimationTree")
sprites = NodePath("sprites")
death_effect_ps = ExtResource("2_7ybi8")
hurt_effect_ps = ExtResource("3_stndc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uujpw")
debug_color = Color(0.537255, 0.537255, 0.529412, 0.419608)

[node name="hurtbox" parent="." instance=ExtResource("2_fbwjr")]
collision_layer = 4
collision_mask = 128

[node name="hurtbox_collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(1, -69)
shape = SubResource("CapsuleShape2D_8gqwq")
debug_color = Color(0.364706, 0.615686, 0, 0.419608)

[node name="sprites" type="Node2D" parent="."]

[node name="rotation_part" type="Node2D" parent="sprites"]

[node name="hitbox" parent="sprites/rotation_part" instance=ExtResource("3_debke")]
collision_layer = 8
collision_mask = 64

[node name="hitbox_collision" type="CollisionPolygon2D" parent="sprites/rotation_part/hitbox"]
polygon = PackedVector2Array(-114, -16, -139, -62, -77, -70, -64, -20)

[node name="AnimPart" type="Sprite2D" parent="sprites"]
texture_filter = 2
material = SubResource("ShaderMaterial_q17jp")
position = Vector2(0, 4.155)
offset = Vector2(0, 4.175)
region_rect = Rect2(137.99, 2577.31, 165.192, 155.897)

[node name="arm_r" type="Sprite2D" parent="sprites/AnimPart"]
use_parent_material = true
position = Vector2(-47.85, -74.354)
texture = ExtResource("8_65k71")
offset = Vector2(-28.65, 24.245)
region_rect = Rect2(157.259, 3009.07, 145.268, 310.023)

[node name="foot_r" type="Sprite2D" parent="sprites/AnimPart"]
position = Vector2(-30, -41)
texture = ExtResource("9_anbiv")
offset = Vector2(4.95, 15.885)

[node name="foot_l" type="Sprite2D" parent="sprites/AnimPart"]
position = Vector2(17, -34)
texture = ExtResource("10_4ur4e")
offset = Vector2(4.485, 16.075)

[node name="body" type="Sprite2D" parent="sprites/AnimPart"]
use_parent_material = true
position = Vector2(-0.850006, -31.354)
texture = ExtResource("11_agssj")
offset = Vector2(1.175, -22.49)
region_rect = Rect2(1427.03, 2864.56, 130.68, 70.1799)

[node name="head" type="Sprite2D" parent="sprites/AnimPart"]
use_parent_material = true
position = Vector2(-6.85001, -75.354)
texture = ExtResource("12_dl1yb")
offset = Vector2(10.581, -28.146)
region_rect = Rect2(1408.4, 3257.4, 206.8, 138.6)

[node name="arm_l" type="Sprite2D" parent="sprites/AnimPart"]
use_parent_material = true
position = Vector2(41.15, -57.354)
texture = ExtResource("13_g6f5s")
offset = Vector2(20.045, 10.115)
region_rect = Rect2(194.9, 1632.4, 93.5, 114.4)

[node name="movement" type="Node" parent="."]
script = ExtResource("4_j2j8w")

[node name="ability_holder" type="Node" parent="."]
script = ExtResource("5_dhbqj")

[node name="state_machine" type="Node2D" parent="."]
script = ExtResource("6_r6r3x")

[node name="inactive_state" type="Node2D" parent="state_machine"]
script = ExtResource("9_opwty")

[node name="idle_state" type="Node2D" parent="state_machine"]
script = ExtResource("12_6livb")

[node name="walk_state" type="Node2D" parent="state_machine"]
script = ExtResource("14_agswa")

[node name="animation_&_sound" type="Node" parent="."]

[node name="sound" type="AudioStreamPlayer2D" parent="animation_&_sound"]
script = ExtResource("14_y643d")

[node name="hit_sound" type="AudioStreamPlayer2D" parent="animation_&_sound"]
script = ExtResource("14_y643d")

[node name="hit_anim" type="AnimationPlayer" parent="animation_&_sound"]
autoplay = "blink_off"
libraries = {
"": SubResource("AnimationLibrary_6o1v3")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="animation_&_sound"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_l8e67")
}

[node name="AnimationTree" type="AnimationTree" parent="animation_&_sound"]
tree_root = SubResource("AnimationNodeStateMachine_iuxlo")
anim_player = NodePath("../AnimationPlayer")
